fix bug of top image not showing

--- a/style.css
+++ b/style.css
@@ -290,7 +290,7 @@ footer p:first-child span {
   padding: 1rem;
 }
 #final-image {
-  /* width: 2rem; */
+  width: 2rem;
 }
 /* ................. time to work on media queries................. */
 @media (max-width: 1110px) {
